--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ textarea:focus::placeholder {
 
 .header__body_2 {
   padding: 75px 0 65px 0;
-  background: url(../img/bg/img.jpg) center/cover no-repeat;
+  background: url(../img/bg/main.jpg) center/cover no-repeat;
   margin-bottom: 100px;
 }
 
