--- a/css/style.css
+++ b/css/style.css
@@ -1447,13 +1447,6 @@ textarea:focus::placeholder {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0 -40px;
-}
-
-@media (max-width: 640px) {
-  .tips-row-2__row {
-    margin: 0 -20px;
-  }
 }
 
 @media (max-width: 640px) {
@@ -1468,12 +1461,21 @@ textarea:focus::placeholder {
   -webkit-box-flex: 0;
   -ms-flex: 0 1 50%;
   flex: 0 1 50%;
-  padding: 0 40px;
+}
+
+.tips-row-2__col:first-child {
+  margin-right: 80px;
 }
 
 @media (max-width: 640px) {
-  .tips-row-2__col {
-    padding: 0 20px;
+  .tips-row-2__col:first-child {
+    margin-right: 40px;
+  }
+}
+
+@media (max-width: 640px) {
+  .tips-row-2__col:first-child {
+    margin-right: 0;
   }
 }
 
